# Predict-Loan-Default

./: .env  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
data/: README.md  clean.csv  raw.csv
data/bronze/: raw.csv
data/silver/: clean.csv
mlflow_artifacts/: README.md
mlflow_artifacts/3/2bcaaa8365f14ff98272a68f69cdc7b8/artifacts/: cv_results.csv  estimator.html
mlflow_artifacts/3/3ba38421b81b4f5ca692b58b76b46a4c/artifacts/: cv_results.csv  estimator.html
mlflow_artifacts/3/59aea8ae8f084c319d861b83da58a5bd/artifacts/: model_summary.txt
mlflow_artifacts/3/82d7dba810634978a74afc4088d1a4b7/artifacts/: estimator.html
mlflow_artifacts/3/83284423d49c4bf69e06a9ff28e80309/artifacts/: cv_results.csv  estimator.html
mlflow_artifacts/3/d07410e614ba4f2c80001907cd1d3323/artifacts/: cv_results.csv  estimator.html
mlflow_data/: mlflow.db
reports/: README.md  keras_best_model_summary.txt  keras_classification_report.txt  rf_classification_report.txt  rf_feature_importances.csv  xgb_classification_report.txt
src/: README.md  check_exp.py  clean_data.py  feature_engineering.py  import_data.py  mlp_experiment.py  run_experiments.py
src/experiments/: README.md  __init__.py  config.py  data_utils.py  exp_cli.py  experiment_cli.py  experiment_keras.py  experiment_rf.py  experiment_xgb.py  metrics_utils.py  mlflow_utils.py  models_keras.py  trial_keras.py  trial_rf.py  trial_xgb.py  viz_utils.py
src/preprocessing/: README.md  clean_data.py  config.py  feature_engineering.py  import_data.py  preprocess_cli.py
(+80 files in other folders)
