[project]
name = "experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.3.2",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "scikeras>=0.13.0",
    "scikit-learn>=1.7.2",
    "tensorflow-cpu>=2.20.0",
    "xgboost>=3.0.5",
]
